--- a/graphs.html
+++ b/graphs.html
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="bs-docs-section">
-                    <h1 id="graph-functions" class="page-header">Graph Functions</h1>
+                    <h1 id="the-graph-functions" class="page-header">The Graph Functions</h1>
                     <p class="lead">If you're planning on creating graph diagrams and also making use of external datasets, you can make use of a set of <strong>DiagrammeR</strong> functions that work well with data frames. Data and attributes can be collected in this way, provided to a graph object, and then inspected, manipulated, and displayed.</p>
                     <h2 id="node-edge-data-frames">Node/Edge Data Frames</h2>
                     <p>These functions are used to create specialized data frames. One type is for nodes, the other for edges. Both types of data frames are parsed and those column names that match attributes for either nodes (in the node data frame) or edges (in the edge data frame) will be used to provide attribute values on a per-node or per-edge basis. Columns with names that don't match reserved attribute names are disregarded and, because of this, you can include columns with useful data for analysis.</p>
@@ -1296,7 +1296,7 @@ create_graph(nodes_df = nodes_df, edges_df = edges_df,
                         <li>
                             <a href="#building-graphs">Building Graphs</a>
                             <ul class="nav">
-                                <li><a href="#graph-functions">Graph Functions</a></li>
+                                <li><a href="#the-graph-functions">The Graph Functions</a></li>
                                 <li><a href="#the-graph-object">The Graph Object</a></li>
                             </ul>
                         </li>
