--- a/graphs.html
+++ b/graphs.html
@@ -74,7 +74,7 @@
                 <div class="bs-docs-section">
                     <h1 id="building-graphs" class="page-header">Building Graphs</h1>
                     <p class="lead"><strong>DiagrammeR</strong> has a nice set of functions for building graphs. You can continually build the graph object, modify its attributes, get information from it, and render a graph diagram. </p>
-                    <h2 id="graph-functions">Graph Functions</h2>
+                    <h2 id="the-graph-functions">The Graph Functions</h2>
                     <p>A collection of graph functions is available for creating and manipulating graphs (specifically, graph objects). They allow you to generate node and edge data frames (collections of nodes or edges along with their attributes), perform scaling of attribute values with data values, draw information from the graph object, and much more.</p>
                     <div>
                         <img src="img/graph-functions/graph_functions_2x.png" class="img-responsive center-block">
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="bs-docs-section">
-                    <h1 id="the-graph-functions" class="page-header">The Graph Functions</h1>
+                    <h1 id="graph-functions" class="page-header">Graph Functions</h1>
                     <p class="lead">If you're planning on creating graph diagrams and also making use of external datasets, you can make use of a set of <strong>DiagrammeR</strong> functions that work well with data frames. Data and attributes can be collected in this way, provided to a graph object, and then inspected, manipulated, and displayed.</p>
                     <h2 id="node-edge-data-frames">Node/Edge Data Frames</h2>
                     <p>These functions are used to create specialized data frames. One type is for nodes, the other for edges. Both types of data frames are parsed and those column names that match attributes for either nodes (in the node data frame) or edges (in the edge data frame) will be used to provide attribute values on a per-node or per-edge basis. Columns with names that don't match reserved attribute names are disregarded and, because of this, you can include columns with useful data for analysis.</p>
