--- a/graphs.html
+++ b/graphs.html
@@ -1272,7 +1272,7 @@ edge_info(graph)
                 </div>
                 <div class="bs-docs-section">
                     <h1 id="examples" class="page-header">Examples</h1>
-                    <p class="lead">Here is a selection of examples to demonstrate how these graph functions can be used with external datasets.</p>
+                    <p class="lead">Here is an example for demonstrating how these graph functions can be used with external datasets.</p>
                     <h2 id="nycflights13">Data from nycflights13</h2>
                     <p>Let's use the <strong>nycflights13</strong> package to prepare some data frames and then create a graph diagram.</p>
                     <div class="bs-example">
