--- a/graphs.html
+++ b/graphs.html
@@ -773,7 +773,7 @@ graph &lt;-
 render_graph(graph)</code></pre>
                         </div>
                     </div>
-                    <p>For a visual summary of the graph, use the <code>display_graph_object</code> function. The top numbers here indicate that there is <code>1</code> graph attribute set, <code>2</code> node attributes set, and <code>2</code> edge attributes set. The number in the blue region indicates the number of nodes in the graph, and the number in the green regions provides the number of edges.</p>
+                    <p>For a visual summary of the graph, use the <code>display_graph_object</code> function. The top numbers here indicate that there is <code>1</code> graph attribute set, <code>2</code> node attributes set, and <code>2</code> edge attributes set. The number in the blue region (<code>26</code>) indicates the number of nodes in the graph, and the number in the green region (also <code>26</code>) provides the number of edges.</p>
                     <div class="bs-example">
                         <img src="img/graph-functions/graph_summary_example.png" class="img-responsive center-block">
                     </div>
