--- a/graphs.html
+++ b/graphs.html
@@ -813,7 +813,7 @@ edges &lt;-
                edge_to = sample(LETTERS, replace = TRUE),
                relationship = "letter_to_letter")
 
-# Use pipeR %>>% operator between 'create_graph',
+# Use the pipeR %>>% operator between 'create_graph',
 # and 'render_graph' or 'display_graph_object' calls
 create_graph(nodes_df = nodes,
              edges_df = edges,
