--- a/docs.html
+++ b/docs.html
@@ -137,7 +137,7 @@
                         </div>
                         <div class="col-sm-6">
                             <h3>CRAN</h3>
-                            <p>The stable release. While this is likely to be more stable than <strong>GitHub</strong> version, <strong>CRAN</strong> releases are far less frequent.</p>
+                            <p>The stable release. While this is likely to be more stable than the <strong>GitHub</strong> version, <strong>CRAN</strong> releases are far less frequent.</p>
                             <div>
                                 <pre><code class="prettyprint">install.packages('DiagrammeR')</code></pre>
                             </div>
