--- a/graphs.html
+++ b/graphs.html
@@ -958,6 +958,7 @@ create_graph(nodes_df =
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
                         </div>
+
                     <p>The <code>node_info</code> and <code>edge_info</code> functions provide information about the nodes and edges in the graph. The information is presented in the form of a data frame. For <code>node_info</code>, the following data is returned:</p>
                         <ul>
                             <li><code>node</code></li>
@@ -1381,6 +1382,18 @@ edge_info(graph)
                         </div>
                         <div>
                             <img src="img/graph-functions/trigger_script_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
+                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
+                            <img src="img/graph-functions/render_graph_from_series_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
+                            <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
+                        </div>
+                        <div>
+                            <img src="img/graph-functions/series_info_2x.png" class="img-responsive center-block">
                         </div>
                         <div>
                             <img src="img/graph-functions/spacer_2x.png" class="img-responsive center-block">
