Add new version information

--- a/index.html
+++ b/index.html
@@ -301,6 +301,32 @@
                                 </div>
                             </div>
                         </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/0_7.png" alt="0.3">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="subheading">More Functions to Build Graphs</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Many more new functions were introduced to make it easier to inspect, analyze, and modify graphs.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/0_8.png" alt="0.3">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="subheading">New Rendering Engines and Graph Functions</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Includes support for <strong>visNetwork</strong> graph rendering. More graph functions added, and, all functions optimized for piping.</p>
+                                </div>
+                            </div>
+                        </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <h4><br>
