--- a/graphs.html
+++ b/graphs.html
@@ -997,7 +997,7 @@ node_count(graph, type = FALSE)
                         </div>
                     </div>
                     <h2 id="modifying-the-graph">Modifying the Graph</h2>
-                    <p>Add nodes, delete edges, modify relationships between nodes, set node type declarations... Those are some of the things you can do with these graph construction/destruction functions.</p>
+                    <p>Add nodes, delete edges, modify relationships between nodes, and set node type declarations. Those are some of the things you can do with these graph construction/destruction functions.</p>
                     <p>There are 6 functions with which one can modify graphs:</p>
                     <ul>
                             <li><code>add_node</code> <em>Add a node to an existing graph object</em></li>
